	 openiblnd - IbGold 1.8.2,
	 o2iblnd   - OFED 1.1, 1.2.0, 1.2.5, and 1.3
	 viblnd    - Voltaire ibhost 3.4.5 and later,
	 ciblnd    - Topspin 3.2.0,
	 iiblnd    - Infiniserv 3.3 + PathBits patch,
	 gmlnd     - GM 2.1.22 and later,
	 mxlnd     - MX 1.2.1 or later,
	 ptllnd    - Portals 3.3 / UNICOS/lc 1.5.x, 2.0.x

Severity   : 
Bugzilla   : 
Description: 
Details    : 

Severity   : minor
Bugzilla   : 16321
Description: concurrent_sends in IB LNDs should not be changeable at run time
Details    : concurrent_sends in IB LNDs should not be changeable at run time

Severity   : normal
Bugzilla   : 15272
Description: ptl_send_rpc hits LASSERT when ptl_send_buf fails
Details    : only hits under out-of-memory situations


-------------------------------------------------------------------------------


04-26-2008  Sun Microsystems, Inc.
       * version 1.6.5
       * Support for networks:
	socklnd   - any kernel supported by Lustre,
	qswlnd    - Qsnet kernel modules 5.20 and later,
	openiblnd - IbGold 1.8.2,
	o2iblnd   - OFED 1.1 and 1.2.0, 1.2.5
	viblnd    - Voltaire ibhost 3.4.5 and later,
	ciblnd    - Topspin 3.2.0,
	iiblnd    - Infiniserv 3.3 + PathBits patch,
	gmlnd     - GM 2.1.22 and later,
	mxlnd     - MX 1.2.1 or later,
	ptllnd    - Portals 3.3 / UNICOS/lc 1.5.x, 2.0.x

Severity   : normal
Bugzilla   : 14322
Description: excessive debug information removed
Details    : excessive debug information removed

Severity   : major
Bugzilla   : 15712
Description: ksocknal_create_conn() hit ASSERTION during connection race
Details    : ksocknal_create_conn() hit ASSERTION during connection race

Severity   : major
Bugzilla   : 13983
Description: ksocknal_send_hello() hit ASSERTION while connecting race
Details    : ksocknal_send_hello() hit ASSERTION while connecting race

Severity   : major
Bugzilla   : 14425
Description: o2iblnd/ptllnd credit deadlock in a routed config.
Details    : o2iblnd/ptllnd credit deadlock in a routed config.

Severity   : normal